@@ -1,3 +1,7 @@
+Changelog v5.2.49 (2025-09-16):
+- Fixed small issue with Duration
+- Changed Animepahe url
+
 Changelog v5.2.48 (2025-09-15):
 - Fixed two Setting types
 - Removed print statement
